samples/_failures_safe/1761692818_d844d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aca84a81.c: In function ‘main’:
./samples/SAFE/__tmp_aca84a81.c:147:12: error: missing terminating " character
  147 |     printf("Enter choice
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_aca84a81.c:147:5: error: expected expression at end of input
  147 |     printf("Enter choice
      |     ^~~~~~
./samples/SAFE/__tmp_aca84a81.c:147:5: error: expected declaration or statement at end of input
